[gd_scene load_steps=12 format=3 uid="uid://bx7it0qy2ltjg"]

[ext_resource type="Script" path="res://Scripts/Weapons/weapon_base.gd" id="1_s2dcv"]
[ext_resource type="Resource" uid="uid://btr1krsbto6lb" path="res://Resources/Weapon Stats/test_weapon.tres" id="2_1d6fv"]
[ext_resource type="Script" path="res://Scripts/Weapons/weapon_state_controller.gd" id="3_5qaih"]
[ext_resource type="Script" path="res://Scripts/Weapons/weapon_unequipped_state.gd" id="4_4yjgo"]
[ext_resource type="Script" path="res://Scripts/Weapons/weapon_player_state.gd" id="5_ywtvj"]
[ext_resource type="Script" path="res://Scripts/Weapons/weapon_enemy_state.gd" id="6_wbnty"]
[ext_resource type="Script" path="res://Scripts/Magnetic/magnetic_weapon.gd" id="7_3nbju"]

[sub_resource type="BoxShape3D" id="BoxShape3D_oub4d"]
size = Vector3(0.153, 0.15, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jgs5j"]
albedo_color = Color(0.321569, 0.588235, 0.301961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7lkhd"]
material = SubResource("StandardMaterial3D_jgs5j")
size = Vector3(0.1, 0.1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pxc46"]

[node name="Weapon" type="RigidBody3D" groups=["Weapon"]]
collision_layer = 2
collision_mask = 3
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("1_s2dcv")
stats = ExtResource("2_1d6fv")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_oub4d")

[node name="Model" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7lkhd")

[node name="WeaponInteractArea" type="Area3D" parent="." groups=["Weapon"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponInteractArea"]
shape = SubResource("BoxShape3D_pxc46")

[node name="ProjectileSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="StateController" type="Node" parent="."]
script = ExtResource("3_5qaih")

[node name="Unequipped" type="Node" parent="StateController"]
script = ExtResource("4_4yjgo")

[node name="Timer" type="Timer" parent="StateController/Unequipped"]
one_shot = true
autostart = true

[node name="Player" type="Node" parent="StateController"]
script = ExtResource("5_ywtvj")

[node name="Enemy" type="Node" parent="StateController"]
script = ExtResource("6_wbnty")

[node name="Magnetic" type="Node" parent="."]
script = ExtResource("7_3nbju")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="StateController/Unequipped/Timer" to="StateController/Unequipped" method="_on_timer_timeout"]
